Fixed login padding causing overflows

--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ input[type=search] {
 #ap-prettyLogin > form {
   background-color: #f2f2f2;
   padding: 1rem;
+  margin-top: 5rem;
   padding-top: 5rem;
   border-radius: 15px;
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.2))
@@ -261,9 +262,8 @@ input[type=search] {
   align-items: center;
   flex-wrap: nowrap;
   font-family: sans-serif;
-  min-height: 75vh;
   flex-direction: column;
-  padding-top: 2rem;
+  padding: 2rem 0;
 }
 #ap-prettyLogin > form {
   display: flex;
